fix(ticket): fix alignment of rtl languages (#1271)

--- a/src/assets/css/new/overrides.less
+++ b/src/assets/css/new/overrides.less
@@ -6,6 +6,7 @@ body {
     width: 100%;
     color: @classic-neutral-grey-6;
     font-family: 'Inter', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    text-align: initial;
 }
 
 .h1,
